--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
       "ts-node": "^10.9.1"
    },
    "devDependencies": {
+      "dotenv": "^16.3.1",
+      "openai": "^3.3.0",
       "typescript": "^5.1.6"
    }
 }
