--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
    "author": "William Laurel",
    "license": "MIT",
    "scripts": {
-      "createDoc": "node src/create-doc-from-js/createDocFromJs.ts"
+      "createDoc": "npx tsc && node dist/create-doc-from-js/createDocFromJs.js"
    },
    "dependencies": {
       "ts-node": "^10.9.1"
    },
    "devDependencies": {
+      "@types/node": "^20.4.2",
       "dotenv": "^16.3.1",
       "openai": "^3.3.0",
       "typescript": "^5.1.6"
