--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-   "name": "wsph",
-   "version": "1.0.0",
-   "main": "index.js",
-   "repository": "https://github.com/wilyyy/wsph.git",
-   "author": "William Laurel",
-   "license": "MIT",
-   "scripts": {
-      "createDoc": "npx tsc && node dist/create-doc-from-js/createDocFromJs.js"
-   },
-   "dependencies": {
-      "ts-node": "^10.9.1"
-   },
-   "devDependencies": {
-      "@types/node": "^20.4.2",
-      "dotenv": "^16.3.1",
-      "openai": "^3.3.0",
-      "typescript": "^5.1.6"
-   }
+  "name": "wsph",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/wilyyy/wsph.git",
+  "author": "William Laurel",
+  "license": "MIT",
+  "scripts": {
+    "createDoc": "npx tsc && node dist/create-doc-from-js/createDocFromJs.js",
+    "lint:fix": "eslint --fix src/**/*.{ts,tsx} && prettier --write src/**/*.{ts,tsx}"
+  },
+  "dependencies": {
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.2",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "openai": "^3.3.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.1.6"
+  }
 }
