chore: handle any js or ts file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
-   "compilerOptions": {
-      "target": "es6",
-      "module": "commonjs",
-      "strict": true,
-      "outDir": "./dist",
-      "rootDir": "./src"
-   },
-   "include": ["src/**/*"]
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "strict": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "paths": {
+      "external/*": ["../files/*"]
+    }
+  },
+  "include": ["src/**/*", "../files/**/*"]
 }
